fix wrapping of text

--- a/src/Post.css
+++ b/src/Post.css
@@ -23,6 +23,7 @@
 .post__headerDescription {
   margin-bottom: 10px;
   font-size: 15px;
+  word-break: break-all;
 }
 
 .post__headerText > h3 {
